Follow openrewrite's receipe to finish migration to Java 21
```
mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
 -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE \
 -Drewrite.activeRecipes=org.openrewrite.java.migrate.UpgradeToJava21 \
 -Drewrite.exportDatatables=true
```