@@ -133,7 +133,7 @@ public class RegExpQueryRoutePredicateFactory
          */
         @Override
         public String toString() {
-            return String.format("Query: param regexp='%s' value regexp='%s'", config.getParamRegexp(),
+            return "Query: param regexp='%s' value regexp='%s'".formatted(config.getParamRegexp(),
                     config.getValueRegexp());
         }
     }
